maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: not found: value aMurSud
    S = aMurSud(X,Y)
        ^ShortestPathMaze:24: error: not found: value aMurEst
    E = aMurEst(X,Y)
        ^